--- a/src/main/metadata/classes/UserTriggerHandler.cls
+++ b/src/main/metadata/classes/UserTriggerHandler.cls
@@ -36,9 +36,12 @@ public class UserTriggerHandler
         if (trigger.isBefore && trigger.isUpdate) {
             UserHelper.ValidateUser(Trigger.new);   
         }
+        if ((trigger.isBefore && trigger.isInsert)) {
+            UserHelper.ApexShare((List<User>)trigger.new);   
+        }
     }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
-    	// Implementation to addedd as required in market
+        // Implementation to addedd as required in market
     }
 }
