--- a/src/main/metadata/classes/TriggerLeadTriggerHandlerKR.cls
+++ b/src/main/metadata/classes/TriggerLeadTriggerHandlerKR.cls
@@ -25,10 +25,18 @@ public class TriggerLeadTriggerHandlerKR
         if(isAfter && isUpdate && usr.Profile.Name != 'IntegrationAPI' && LeadUtil.isCreated){
             system.debug('Isafter is working');
             LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
+            LeadSharingforDealerJP.LeadSharingforDealer(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
             LeadUtil.isCreated = false;
         }
-        
-           }
+        if((isUpdate || isInsert) && usr.Profile.Name != 'IntegrationAPI'){
+            system.debug('LeadSharingforDealerJP >>> :');
+            Set<Id> ids = new set<Id>();
+            for(Lead__C leds : (List<Lead__c>)trigger.new){
+                ids.add(leds.id);
+            }
+            LeadSharingforDealerJP.LeadSharing_Dealer(trigger.new);
+        }
+    }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
         // Implementation to addedd as required in market
